# tensorflow-nanodegree

./: README.md
project01_finding_donors_for_charityml/: finding_donors.ipynb  pyproject.toml  report.html
