[tool.poetry]
name = "project01_finding_donors_for_charityml"
version = "0.1.0"
description = ""
authors = ["diascarolina <carolinadiasv@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
ipython = "^8.2.0"
jupyterlab = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
